--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ matplotlib==3.9.3
 numpy==2.1.3
 pandas==2.2.3
 meteostat==1.6.8
-scikit-learn==1.5.2
+scikit-learn==1.6.1
+tensorflow==2.18.0
+torch==2.6.0
